manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: movieapp-svc
spec:
  type: ClusterIP
  selector:
    app: movieapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
